<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StudyGroups</string>
    <string name="login_username">Username</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_password2">Ripeti Password</string>
    <string name="login_button">Login</string>
    <string name="create_account">Crea Account</string>
    <string name="already_member_message"><u>Già registrato? Login</u></string>
    <string name="not_member_yet"><u>Non ancora registrato? Registrati</u></string>
    <string name="disconnect">Disconnetti</string>
    <string name="personalPage">Pagina Personale</string>

    <string name="about_page_description">
        StudyGroups è un\'app che ti permette di trovare studenti che seguono le tue stesse materie, creando dei gruppi di studio
    </string>
    <string name="copy_right">Copyrights © %1$d</string>

    <string name="search_channel_text">Cerca gruppi di studio…</string>
    <string name="channel_list_participant_count">%1$d utenti nella chat</string>

    <string name="chat_enter_message">Scrivi Messaggio</string>
    <string name="chat_button_send">Invia</string>

    <string name="download">Scarica</string>
    <string name="cancel">Annulla</string>
    <string name="upload">Carica</string>
    <string name="info_permission_storage">"Permessi di scrittura sul dispositivo sono necessari per caricare/scaricare i file"</string>
    <string name="delete_message_confirmation">"Cancella"</string>
    <string name="delete_message_question">"Cancella messaggio?"</string>
    <string name="delete_message_cancel">"Annulla"</string>

    <string name="error_message_not_send">"Errore: messaggio non inviato"</string>
    <string name="error_file_not_storage">"File deve essere presente in memoria"</string>
    <string name="error_file_not_send">"Errore: file non inviato"</string>
    <string name="error_deleting_message">"Errore: messaggio non cancellato"</string>

    <string name="channel_chat_content_desc_profile">Immagine Profilo</string>
    <string name="upload_file_text">ha caricato un file</string>

    <string name="add_channel_title">Crea Gruppo</string>

    <string name="participant_list">Utenti in chat attualmente</string>
    <string name="participant_menu">Vedi utenti in chat</string>
    <string name="add_event">Crea evento</string>

    <string name="add_event_title">Crea Evento per </string>
    <string name="add_event_name">Nome Evento</string>
    <string name="add_event_location">Luogo</string>
    <string name="add_event_date">Giorno</string>
    <string name="add_event_time">Ora</string>
    <string name="add_event_description">Informazioni aggiuntive (facoltative)</string>
    <string name="create_event">Crea Evento</string>
    <string name="created_event_text">ha creato un evento</string>
    <string name="view_partecipants">Vedi Partecipanti</string>
    <string name="view_maps">Vedi Mappa</string>
    <string name="view_events">Vedi Eventi</string>
    <string name="no_events">Nessun evento trovato</string>
    <string name="partecipa_confirmation">Partecipa</string>
    <string name="partecipa_delete">Cancella Partecipazione</string>
    <string name="no_partecipant_find">Nessun partecipante</string>
    <string name="event_participant_list">Partecipanti all\'evento</string>
    <string name="event_channel_list">Eventi</string>

    <string name="no_channel_find">Nessun gruppo con questo nome, creane uno</string>
    <string name="no_pref_channel">Nessun gruppo tra i preferiti \nPuoi aggiungerne cercando tra i gruppi e cliccando sulla stella in alto all\'interno della chat</string>
    <string name="create_channel">Crea Gruppo</string>
    <string name="create_channel_name">Nome gruppo</string>
    <string name="loading">Caricamento</string>

    <string name="yes">sì</string>
    <string name="no">no</string>
    <string name="add_favourite">Aggiungi gruppo ai preferiti</string>

    <string name="welcome_back_message">Bentornato su StudyGroups</string>
    <string name="find_groups">Cerca Gruppi</string>
    <string name="view_pref_groups">Vedi i tuoi gruppi preferiti</string>
    <string name="view_event_partecipation">Vedi eventi ai quali parteciperai</string>

    <string name="no_exam_find">Nessun esame inserito</string>
    <string name="add_exam">Aggiungi esame</string>

    <string name="exam_name">Nome esame</string>
    <string name="argument_name">Nome Argomento</string>
    <string name="delete_exam_question">Sei sicuro di voler cancellare questo esame?</string>
    <string name="delete_argument_question">Sei sicuro di voler cancellare questo argomento?</string>
    <string name="add_exam_argument">Inserisci nome del nuovo argomento</string>
    <string name="add_exam_confirmation">Aggiungi argomento</string>
    <string name="argument_change_state">Cambia stato all\'argomento</string>

    <string name="add">Aggiungi</string>
    <string name="change">Cambia</string>

    <string name="settings">Opzioni</string>
    <string name="change_mail">Cambia Email</string>
    <string name="change_password">Cambia Password</string>
    <string name="change_profile_image">Cambia Immagine Profilo</string>
    <string name="new_email">Nuova Email</string>
    <string name="old_email">Vecchia Email</string>
    <string name="new_password">Nuova Password</string>
    <string name="new_password_repeat">Ripeti nuova password</string>

    <string name="password_forget"><u>Password dimenticata?</u></string>
    <string name="reset_password_istruction">
        Ti verrà inviata una email all\'indirizzo fornito. \nSegui le istruzioni per resettare la password \nRicordati di guardare anche nella cartella spam
    </string>
    <string name="confirm">Conferma</string>
    <string name="reset_password">Password Reset</string>

    <string name="link_to_saw"><u>Hai bisogno di un posto col wifi? Dai un\'occhiata al nostro altro progetto</u></string>
    <string name="event_share_facebook">Condividi su Facebook</string>
    <string name="facebook_app_id">1948446985397467</string>

    <string-array
        name="exam_long_clic_options">
        <item>Aggiungi argomento</item>
        <item>Cancella Esame</item>
    </string-array>

    <string-array
        name="argument_long_clic_options">
        <item>Cambia stato</item>
        <item>Cancella Argomento</item>
    </string-array>

    <string-array
        name="argument_option_states">
        <item>Da completare</item>
        <item>In corso</item>
        <item>Completato</item>
    </string-array>


    <string-array
        name="chat_message_long_clic_options">
        <item>Vedi pagina utente</item>
        <item>Cancella Messaggio</item>
    </string-array>

    <string-array
        name="chat_message_long_clic_options_not_delete">
        <item>Vedi pagina utente</item>
    </string-array>








</resources>
