<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favourite_star"
        android:orderInCategory="1"
        android:title="@string/add_favourite"
        android:icon="@drawable/ic_star_full"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_chat_add_event"
        android:orderInCategory="2"
        android:title="@string/add_event"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_chat_view_events"
        android:orderInCategory="3"
        android:title="@string/view_events"
        app:showAsAction="never" />

    <item android:id="@+id/action_chat_view_participants"
        android:title="@string/participant_menu"
        android:orderInCategory="9"
        app:showAsAction="never" />

</menu>