<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/hello_Username_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="casual"
        android:text="Hello username"
        android:textAlignment="center"
        android:textColor="?attr/editTextColor"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_back_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_back_message"
        android:textAlignment="center"
        android:textColor="@color/place_autocomplete_prediction_primary_text"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_weight="0.48"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_general" />

    <Button
        android:id="@+id/main_button_find_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_weight="0.04"
        android:background="#ED303C"
        android:padding="25dp"
        android:text="@string/find_groups"
        android:textSize="24sp" />

    <Button
        android:id="@+id/main_button_view_pref_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:background="#F5634A"
        android:padding="25dp"
        android:text="@string/view_pref_groups"
        android:textSize="24sp" />

    <Button
        android:id="@+id/main_button_view_event_partecipation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:background="#FF9C5B"
        android:padding="25dp"
        android:text="@string/view_event_partecipation"
        android:textSize="24sp" />

    <Button
        android:id="@+id/main_button_view_personal_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:background="#FAD089"
        android:padding="25dp"
        android:text="@string/personalPage"
        android:textSize="24sp" />

</LinearLayout>