<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/add_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="30dp"
            android:fontFamily="casual"
            android:text="@string/add_event_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_add_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_event_name"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
           >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_add_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/add_event_location"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_add_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/add_event_date"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_add_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/add_event_time"
                android:textSize="24sp" />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/button_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:padding="20dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/create_event"
            android:textSize="30sp" />


    </LinearLayout>


</ScrollView>