<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:text="@string/login_username"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="169dp"
        android:text="@string/login_password"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_below="@+id/username_edit_text"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/loginButton"
        android:layout_height="100dp"
        android:layout_width="200dp"
        android:text="@string/login_button"
        android:textSize="36sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp" />
</RelativeLayout>